--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
-#SemiHardcore Plugin made by Jairusu#5237
+#DiscordIntegrationPlugin Plugin made by Jairusu#5237
 #This plugin is inspired by Scarsz's plugin DiscordSRV
 
 #You need to add your botToken to enable the plugin
